--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ button:hover {
 }
 #computerGameboard .cell:hover {
     transform: scale(1.1);
-    background-color: rgba(173, 216, 230);
+    background-color: grey;
 }
 .cellLabel {
     position: absolute;
@@ -183,4 +183,41 @@ button:hover {
     transition: all .3s ease-in-out;
     background-color: #fff;
     cursor: pointer;
+}
+#end-game-div {
+    min-height: inherit;
+    width: 100%;
+    background-image: radial-gradient(rgba(0, 0, 0, 0.6), black);
+    position: relative;
+}
+#end-game-text {
+    font-size: 10rem;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 100;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: .9;
+}
+#restart-btn-container {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -80%);
+}
+#restart-btn {
+    font-size: 2.75rem;
+    padding: 5px 2rem;
+    cursor: pointer;
+    border: none;
+    background-color: white;
+    color: black;
+    transition: all 0.3s ease-in-out;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+#restart-btn:hover {
+    transform: scale(1.1);
 }
